# astroport-dca

contracts/dca/: Cargo.toml
contracts/dca/examples/: dca_schema.rs
contracts/dca/src/: constants.rs  contract.rs  error.rs  helpers.rs  lib.rs  state.rs
contracts/dca/src/handlers/: add_bot_tip.rs  cancel_dca_order.rs  create_dca_order.rs  mod.rs  modify_dca_order.rs  perform_dca_purchase.rs  receive.rs  update_config.rs  update_user_config.rs  withdraw.rs
contracts/dca/src/queries/: get_all_dca_orders.rs  get_config.rs  get_dca_order.rs  get_dca_orders.rs  get_tips.rs  get_user_asset_dca_orders.rs  get_user_config.rs  get_user_dca_orders.rs  get_user_tips.rs  mod.rs
contracts/dca/src/testing/: custom_querier.rs  cw20_querier.rs  helpers.rs  integration.rs  mod.rs  tests.rs
contracts/dca/src/tests/: common.rs  mod.rs  order.rs  purchase.rs  purchase_cw20.rs  tips.rs  user_config.rs
