[package]
name = "astroport-dca-module"
version = "2.0.0"
authors = ["Astroport", "Kaimen Sano"]
edition = "2021"
description = "The Astroport DCA module contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = { version = "2.0.0", git = "https://github.com/astroport-fi/astroport-core.git" }
astroport-dca = { version = "2.0.0", path = "../../packages/astroport-dca" }

cw-storage-plus = "0.14.0"
cw2 = "0.14.0"
cw20 = "0.14.0"
cosmwasm-std = "1.0.0"

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
